After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 601205 - Crash with empty .savedSearch file
Crash with empty .savedSearch file
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: general
2.30.x
Other Linux
: Normal critical
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2009-11-09 00:41 UTC by Victor Vargas
Modified: 2011-02-04 21:24 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
nautilus backtrace (6.59 KB, text/plain)
2009-11-09 00:41 UTC, Victor Vargas
  Details
Small patch to not make nautilus crash (644 bytes, patch)
2010-06-27 09:08 UTC, Marcus Carlson
none Details | Review
another approach (431 bytes, patch)
2011-02-01 14:43 UTC, Stefano Teso
none Details | Review
yet another patch (1.17 KB, patch)
2011-02-01 16:06 UTC, Stefano Teso
committed Details | Review

Description Victor Vargas 2009-11-09 00:41:36 UTC
Created attachment 147233 [details]
nautilus backtrace

This report was originally filled at:
https://bugs.edge.launchpad.net/ubuntu/+source/nautilus/+bug/433673


This is not a major problem as it can only be reproduced synthetically but
still it should be fixed as it crashes nautilus every time.
Steps to reproduce:

1. Create a new file named foo.savedSearch
2. Double click the new file

Nautilus has now crashed.

I can probably fix this myself later but not now, just creating this report so
it wont be forgotten.

Stacktrace from Jaunty
  • #0 _g_utf8_normalize_wc
    at /build/buildd/glib2.0-2.20.1/glib/gunidecomp.c line 364
  • #1 IA__g_utf8_normalize
    at /build/buildd/glib2.0-2.20.1/glib/gunidecomp.c line 525
  • #2 nautilus_search_engine_simple_start
    at nautilus-search-engine-simple.c line 112
  • #3 finish_loading
    at fm-directory-view.c line 8535
  • #4 call_ready_callbacks_at_idle
    at nautilus-directory-async.c line 1908
  • #5 IA__g_main_context_dispatch
    at /build/buildd/glib2.0-2.20.1/glib/gmain.c line 1814
  • #6 g_main_context_iterate
    at /build/buildd/glib2.0-2.20.1/glib/gmain.c line 2448
  • #7 IA__g_main_loop_run
    at /build/buildd/glib2.0-2.20.1/glib/gmain.c line 2656
  • #8 IA__gtk_main
    at /build/buildd/gtk+2.0-2.16.1/gtk/gtkmain.c line 1205
  • #9 main
    at nautilus-main.c line 518

Comment 1 Marcus Carlson 2010-06-27 09:08:16 UTC
Created attachment 164733 [details] [review]
Small patch to not make nautilus crash

I think this one only fixes the "simple" engine though.
Comment 2 Kris Thomsen 2011-01-03 16:00:32 UTC
I was able to reproduce this in Nautilus 2.30.1 on Debian Testing.
Comment 3 André Klapper 2011-01-03 16:39:39 UTC
=> version bump
Comment 4 Stefano Teso 2011-02-01 14:43:00 UTC
Created attachment 179796 [details] [review]
another approach

Hi,

another patch; this one fixes NautilusQuery instead, and should prevent issues with both the simple engine and tracker.
Comment 5 Stefano Teso 2011-02-01 16:06:34 UTC
Created attachment 179805 [details] [review]
yet another patch

Another patch; this one should make nautilus_query_load a bit more robust to errors (empty XML file, bad XML text). Includes the previous patch.
Comment 6 Cosimo Cecchi 2011-02-03 14:38:49 UTC
Review of attachment 179805 [details] [review]:

Looks good, thanks.
Comment 7 Cosimo Cecchi 2011-02-04 21:24:41 UTC
Pushed to master now.