query: don't crash with empty .savedSearch files

Be more robust against empty .savedSearch files.

https://bugzilla.gnome.org/show_bug.cgi?id=601205